--- a/DZ 11/index11.html
+++ b/DZ 11/index11.html
@@ -201,6 +201,16 @@
                 <p>Тема: «Замечательная»</p>
             </div>
         </div>
+        <div class="container_4">
+            <div class="block_img">
+                <img src="img/logo_baggage.png" alt="">
+            </div>
+            <span>18:00</span>
+            <div>
+                <h5>Зал № 1</h5>
+                <p>Интенсив от школы рекламы и дизайна “Багаж”</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
