--- a/DZ 07/index07.html
+++ b/DZ 07/index07.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/main07.css">
 </head>
 <body>
@@ -73,40 +75,66 @@
         <div class="center">
             <a href="#">Show All</a>
         </div>
+        <div class="owl-carousel">
+            <div><h2>WHAT OUR CLIENTS SAY</h2>
+                <p>Praesent tincidunt molestie libero mollis porta. Faucibus leo, ac aliquet magna. Vivamus ullamcorper mollis leo, at sagittis mi pellentesque quis. Praesent nec elit tristique.</p>
+                <h4>Larry Jane</h4>
+                <span>General Manager</span>
+            </div>
+            <div><h2>WHAT OUR CLIENTS SAY</h2>
+                <p>Praesent tincidunt molestie libero mollis porta. Faucibus leo, ac aliquet magna. Vivamus ullamcorper mollis leo, at sagittis mi pellentesque quis. Praesent nec elit tristique.</p>
+                <h4>Larry Jane</h4>
+                <span>General Manager</span>
+            </div>
+            <div><h2>WHAT OUR CLIENTS SAY</h2>
+                <p>Praesent tincidunt molestie libero mollis porta. Faucibus leo, ac aliquet magna. Vivamus ullamcorper mollis leo, at sagittis mi pellentesque quis. Praesent nec elit tristique.</p>
+                <h4>Larry Jane</h4>
+                <span>General Manager</span>
+            </div>
+        </div>
     </section>
-    <footer>
-        <div class="cent fff">
-            <div class="ABOUT_FAPOR float">
-                <h4>ABOUT FAPOR</h4>
-                <p>We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. Whether you need to create a brand from scratch, including marketing materials and a beautiful.</p>
-            </div>
-            <div class="float marg">
-                <h4>Contact INFO</h4>
-                <p class="padd">PO Box 17122 Nollins Street <br>
-                    5034 Los Angelos</p>
-                <p>Phone: 1800555.0658</p>
-                <p>Email: support@fapor.com</p>
-                <p>Web: fapor.com</p>
-            </div>
-            <div class="ABOUT_FAPOR float2">
-                <h4>Subscribe to our newsletter</h4>
-                <form action="" method="post">
-                    <div class="px">
-                        <input type="email" placeholder="Enter your email address">
-                    </div>
-                    <button type="submit">SUBSCRIBLE NOW</button>
-                </form>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-        <div class="bord">
-            <div class="cent">
-                <p>© 2016  Fapor by Respotheme</p>
-            </div>
-        </div>
-    </footer>
+<!--    <footer>-->
+<!--        <div class="cent fff">-->
+<!--            <div class="ABOUT_FAPOR float">-->
+<!--                <h4>ABOUT FAPOR</h4>-->
+<!--                <p>We are a fairly small, flexible design studio that designs for print and web. We work flexibly with clients to fulfil their design needs. Whether you need to create a brand from scratch, including marketing materials and a beautiful.</p>-->
+<!--            </div>-->
+<!--            <div class="float marg">-->
+<!--                <h4>Contact INFO</h4>-->
+<!--                <p class="padd">PO Box 17122 Nollins Street <br>-->
+<!--                    5034 Los Angelos</p>-->
+<!--                <p>Phone: 1800555.0658</p>-->
+<!--                <p>Email: support@fapor.com</p>-->
+<!--                <p>Web: fapor.com</p>-->
+<!--            </div>-->
+<!--            <div class="ABOUT_FAPOR float2">-->
+<!--                <h4>Subscribe to our newsletter</h4>-->
+<!--                <form action="" method="post">-->
+<!--                    <div class="px">-->
+<!--                        <input type="email" placeholder="Enter your email address">-->
+<!--                    </div>-->
+<!--                    <button type="submit">SUBSCRIBLE NOW</button>-->
+<!--                </form>-->
+<!--            </div>-->
+<!--            <div class="clearfix"></div>-->
+<!--        </div>-->
+<!--        <div class="bord">-->
+<!--            <div class="cent">-->
+<!--                <p>© 2016  Fapor by Respotheme</p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </footer>-->
     <div class="qwe">
 
     </div>
+
+
+
+    <script
+            src="http://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
