--- a/DZ 007/index007.html
+++ b/DZ 007/index007.html
@@ -8,9 +8,18 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome-free-5.0.8/web-fonts-with-css/css/fontawesome-all.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://resources/demos/style.css">
     <link rel="stylesheet" href="css/main007.css">
 </head>
 <body>
+<div id="dialog" title="Basic dialog">
+    <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+</div>
+
+
     <header>
         <div class="container">
             <a href=""><img src="img/logo.png" alt="Logo"></a>
@@ -20,7 +29,7 @@
                     <li><a href="">About</a></li>
                     <li><a href="">service</a></li>
                     <li><a href="">portfolio</a></li>
-                    <li><a href="">contact</a></li>
+                    <li><a href="#" id="opener">contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -70,10 +79,26 @@
         </div>
     </section>
     <div class="JS">
-        <h2>WHAT OUR CLIENTS SAY</h2>
-        <p>Praesent tincidunt molestie libero mollis porta. Faucibus leo, ac aliquet magna. Vivamus ullamcorper mollis leo, at sagittis mi pellentesque quis. Praesent nec elit tristique.</p>
-        <h4>Larry Jane</h4>
-        <span>General Manager</span>
+        <div class="container">
+            <h2>WHAT OUR CLIENTS SAY</h2>
+            <div class="owl-carousel">
+                <div>
+                    <div><p>Praesent tincidunt molestie libero mollis porta. Faucibus leo, ac aliquet magna. Vivamus ullamcorper mollis leo, at sagittis mi pellentesque quis. Praesent nec elit tristique.</p>
+                        <h4>Larry Jane</h4>
+                        <span>General Manager</span></div>
+                </div>
+                <div>
+                    <div><p>Praesent tincidunt molestie libero mollis porta. Faucibus leo, ac aliquet magna. Vivamus ullamcorper mollis leo, at sagittis mi pellentesque quis. Praesent nec elit tristique.</p>
+                        <h4>Larry Jane</h4>
+                        <span>General Manager</span></div>
+                </div>
+                <div>
+                    <div><p>Praesent tincidunt molestie libero mollis porta. Faucibus leo, ac aliquet magna. Vivamus ullamcorper mollis leo, at sagittis mi pellentesque quis. Praesent nec elit tristique.</p>
+                        <h4>Larry Jane</h4>
+                        <span>General Manager</span></div>
+                </div>
+            </div>
+        </div>
     </div>
     <footer>
         <article>
@@ -100,6 +125,56 @@
             </div>
         </article>
     </footer>
+    <div class="container">
+    <div id="accordion">
+        <h3>Section 1</h3>
+        <div>
+            <p>
+                Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+                ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+                amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+                odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+            </p>
+        </div>
+        <h3>Section 2</h3>
+        <div>
+            <p>
+                Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+                purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+                velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+                suscipit faucibus urna.
+            </p>
+        </div>
+        <h3>Section 3</h3>
+        <div>
+            <p>
+                Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
+                Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
+                ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
+                lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
+            </p>
+            <ul>
+                <li>List item one</li>
+                <li>List item two</li>
+                <li>List item three</li>
+            </ul>
+        </div>
+        <h3>Section 4</h3>
+        <div>
+            <p>
+                Cras dictum. Pellentesque habitant morbi tristique senectus et netus
+                et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
+                faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
+                mauris vel est.
+            </p>
+            <p>
+                Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
+                Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+                inceptos himenaeos.
+            </p>
+        </div>
+    </div>
+    </div>
     <div class="Fapor-by_Respotheme">
         <article>
             <p class="flt">© 2016  Fapor by Respotheme</p>
@@ -109,5 +184,43 @@
             <a class="fab fa-facebook-f" href=""></a>
         </article>
     </div>
+
+
+    <script
+            src="http://code.jquery.com/jquery-2.2.4.min.js"
+            integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+            crossorigin="anonymous"></script>
+
+
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<!--<script>-->
+<!--    $( function() {-->
+<!--        $( "#accordion" ).accordion();-->
+<!--    } );-->
+<!--</script>-->
+
+<!--<script>-->
+<!--    $( function() {-->
+<!--        $( "#dialog" ).dialog({-->
+<!--            autoOpen: false,-->
+<!--            show: {-->
+<!--                effect: "blind",-->
+<!--                duration: 1000-->
+<!--            },-->
+<!--            hide: {-->
+<!--                effect: "explode",-->
+<!--                duration: 1000-->
+<!--            }-->
+<!--        });-->
+
+<!--        $( "#opener" ).on( "click", function() {-->
+<!--            $( "#dialog" ).dialog( "open" );-->
+<!--        });-->
+<!--    } );-->
+<!--</script>-->
+    <script src="js/owl.carousel.min.js"></script>
+
+<script src="js/scripts.js"></script>
+
 </body>
 </html>
